<resources>
    <string name="app_name" translatable="false">Nebula Pro</string>
    <string name="offer" translatable="false">60% OFF</string>
    <string name="products" translatable="false">Products</string>
    <string name="downloads" translatable="false">Downloads</string>
    <string name="product_name" translatable="false">Product Name</string>
    <string name="bv" translatable="false">BV %</string>
    <string name="retail_profit_new" translatable="false">Retail Income</string>
    <string name="nv" translatable="false">NV</string>
    <string name="customer_id" translatable="false">Customer ID</string>
    <string name="customer_name" translatable="false">Customer Name</string>
    <string name="emi_no" translatable="false">EMI No</string>
    <string name="amount_paid" translatable="false">Amount Paid</string>
    <string name="type" translatable="false">Type</string>
    <string name="leadership_bonus" translatable="false">Leadership Bonus</string>
    <string name="purchase_date" translatable="false">Purchase Date</string>
    <string name="total" translatable="false">Total</string>
    <string name="attachment" translatable="false"><u>Attachment</u></string>
    <string name="product_desc_title" translatable="false">You might also like these</string>
    <string name="my_bv_commission" translatable="false">My BV Commission</string>
    <string name="member_name_" translatable="false">Member Name</string>
    <string name="member_id_" translatable="false">IBO ID</string>
    <string name="closing_date" translatable="false">Closing Date</string>
    <string name="my_bv" translatable="false">My BV %</string>
    <string name="rank" translatable="false">Rank</string>
    <string name="gold_income_" translatable="false">Gold Income</string>
    <string name="total_bv_commission" translatable="false">Total BV Commission</string>
    <string name="more_info" translatable="false">More Info</string>
    <string name="bv_from_sales" translatable="false">BV From Sales</string>
    <string name="fl_bv" translatable="false">FLBV</string>
    <string name="my_BV" translatable="false">My BV</string>
    <string name="dbv" translatable="false">DBV</string>
    <string name="dbv_commission" translatable="false">DBV Commission</string>
    <string name="total_income_new" translatable="false">Income</string>
    <string name="incomeorshare" translatable="false">Income / Share</string>
    <string name="sale_id" translatable="false">Sale ID</string>
    <string name="unit" translatable="false">Unit</string>
    <string name="sale_info" translatable="false">Sale Info</string>
    <string name="investment" translatable="false">Investment</string>
    <string name="payment_plan" translatable="false">Payment Plan</string>
    <string name="token_amount" translatable="false">Token Amount</string>
    <string name="dp_20" translatable="false">DP</string>
    <string name="discount" translatable="false">Discount</string>
    <string name="monthly_installment" translatable="false">Monthly Installment</string>
    <string name="next_installment_date" translatable="false">Next Installment Date</string>
    <string name="customer_info" translatable="false">Customer Info</string>
    <string name="state_" translatable="false">State</string>
    <string name="city_" translatable="false">City</string>
    <string name="mobile" translatable="false">Mobile</string>
    <string name="pincode_" translatable="false">Pincode</string>
    <string name="text_alcohol" translatable="false">Alcohol</string>
    <string name="text_coffee" translatable="false">Coffee</string>
    <string name="text_pasta" translatable="false">Pasta</string>
    <string name="text_cold_drinks" translatable="false">Cold Drinks</string>
    <string name="text_expanded" translatable="false">Expanded</string>
    <string name="text_collapsed" translatable="false">Collapsed</string>
    <string name="pdf_share_toast" translatable="false">Please download the pdf to share</string>
    <string name="image_share_toast" translatable="false">Please download image to share</string>
    <string name="ratechart_download_toast" translatable="false">Are you sure you want to download this rate chart?</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="my_profile" translatable="false">My Profile</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="login" translatable="false">Login</string>
    <string name="login_new" translatable="false">Associate / IBO Login</string>
    <string name="registration_new" translatable="false">Associate / IBO Registration</string>
    <string name="forgot_password" translatable="false">Forgot Password</string>
    <string name="forgot_password_title" translatable="false">Forgot Password?</string>
    <string name="forgot_otp_password" translatable="false">Reset Your Password </string>
    <string name="ibo_new_register" translatable="false">Register Here</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="dashboard" translatable="false">Dashboard</string>
    <string name="current_rank" translatable="false">Current Rank </string>
    <string name="next_eligible_rank" translatable="false">Next Eligible Rank </string>
    <string name="sponser_id_" translatable="false">Sponsor ID</string>
    <string name="share_via" translatable="false">Share via</string>
    <string name="change_password" translatable="false">Change Password</string>
    <string name="change_password_underline" translatable="false"><u>Change Password</u></string>
    <string name="old_password" translatable="false">Old Password</string>
    <string name="new_password" translatable="false">New Password</string>
    <string name="confirm_password" translatable="false">Confirm Password</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="prompt_share" translatable="false">Share</string>
    <string name="starpoolnew" translatable="false">Star pool</string>
    <string name="my_sales" translatable="false">My Sales</string>
    <string name="download" translatable="false">Download</string>
    <string name="my_purchases" translatable="false">My Purchases</string>
    <string name="vacation_purchase" translatable="false">Vacation Package Purchased on</string>
    <string name="no_records_found" translatable="false">No records found..!</string>
    <string name="level" translatable="false">Level</string>
    <string name="leg" translatable="false">Leg</string>
    <string name="joining_date_" translatable="false">Joined</string>
    <string name="email" translatable="false">Email</string>
    <string name="gbv" translatable="false">GBV</string>
    <string name="generation_income_" translatable="false">Generation Income</string>
    <string name="date" translatable="false">Date</string>
    <string name="tds" translatable="false">TDS</string>
    <string name="net_amount" translatable="false">Net Amount</string>
    <string name="shares" translatable="false">Shares</string>
    <string name="payout" translatable="false">Payout</string>
    <string name="projects_" translatable="false">Projects</string>
    <string name="my_income" translatable="false">My Income</string>
    <string name="Rs" translatable="false">\u20B9</string>
    <string name="current_badge" translatable="false">My Current Badge</string>
    <string name="upcoming_badge" translatable="false">Upcoming Badge</string>
    <string name="last_payout" translatable="false">Last Payout</string>
    <string name="last_payout_date" translatable="false">Last Payout Date</string>
    <string name="payout_details" translatable="false"><u><b>Payout Details</b></u></string>
    <string name="amount_received" translatable="false">Amount Received</string>
    <string name="pending_amount" translatable="false">Pending Amount</string>
    <string name="installment_amount" translatable="false">Installment Amount</string>
    <string name="get_password" translatable="false">Get Password</string>
    <string name="product_list_dw1" translatable="false">Hawthorn Suites, Dwarka</string>
    <string name="submit" translatable="false">Submit</string>
    <string name="Booster_Income_AavaasAhmedabad" translatable="false">Booster Income</string>
    <string name="booster_income" translatable="false">Booster Income</string>
    <string name="SuperBoosterIncome_AavaasAhmedabad" translatable="false">Super Booster Income</string>
    <string name="super_booster_income" translatable="false">Super Booster Income</string>
    <string name="su_booster" translatable="false">SU Booster Income</string>
    <string name="car_program" translatable="false">Car Program Income</string>
    <string name="logout_show" translatable="false">Are you sure you want to logout?</string>
    <string name="Network_is_not_available" translatable="false">Network is not available.</string>
    <string name="PlacementTree" translatable="false">Placement Tree</string>
    <string name="SponsorTree" translatable="false">Sponsor Tree</string>
    <string name="enter_login_id_password" translatable="false">Enter Login ID and Password</string>
    <string name="enter_login_id" translatable="false">Enter Login ID</string>
    <string name="enter_login_password" translatable="false">Enter Password</string>
    <string name="yes" translatable="false">Ok</string>
    <string name="no" translatable="false">Cancel</string>
    <string name="insufficient_storage" translatable="false">Insufficient storage</string>
    <string name="view_storage" translatable="false">VIEW STORAGE</string>
    <string name="cancel_storage" translatable="false">CANCEL</string>
    <string name="view_device_message_newsletter" translatable="false">This device doesn\'t have enough space to download this newsletter. Consider deleting apps or content you no longer need and try again.</string>
    <string name="retail_income" translatable="false">Retail Income</string>
    <string name="ibo_id" translatable="false">IBO ID</string>
    <string name="downline_name" translatable="false">Name</string>
    <string name="office_phone_number2" translatable="false"><u>1800 100 7276</u> (Toll Free)</string>
    <string name="chennai_email_address" translatable="false"><u>happychennai@nebulacompanies.com</u></string>
    <string name="corporate_office_chennai" translatable="false">CORPORATE OFFICE, CHENNAI</string>
    <string name="corporate_office_chennai_address" translatable="false">OPP. Mahindra World City Main Entrance, G.S.T Main Road, Chennai, Tamil Nadu - 603204</string>
    <string name="corporate_office_chennai_phone_number" translatable="false"><u>044 6741 9777</u></string>
    <string name="verification_code_subtext" translatable="false">(For closing dated 14th April, 2019)</string>
    <string name="verification_code" translatable="false">Enter your Payout PIN </string>
    <string name="validate" translatable="false">Verify</string>
    <string name="skip_pay" translatable="false">Skip</string>
    <string name="resent_pin" translatable="false">Resend PIN</string>
    <string name="pin_tc" translatable="false">This PIN will expire on 14th April, 2019, 7pm. Failure to enter the PIN before
    deadline will result in non payment of your Income.</string>
    <string name="pin_info" translatable="false">Our payout pin has been sent to your registered Mobile Number.</string>
    <string name="pin_disable" translatable="false"> Sorry! The Payout PIN is currently disabled. If you are eligible you will receive an email and SMS for the next payout closing cycle. To receive uninterrupted payouts kindly make sure that your KYC is submitted and verified. Do regularly check your email and SMS.</string>
</resources>