<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_ten_dp"
    android:background="@drawable/dialog_background_inset"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <LinearLayout
            android:id="@+id/ln_title"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/table_effect_up"
            android:orientation="horizontal"
            android:weightSum="14">

            <com.nebulacompanies.ibo.view.MyTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:gravity="center"
                android:padding="5dp"
                android:singleLine="false"
                android:text="@string/ibo_id"
                android:textColor="#ffffff" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#cfcfcf" />


            <com.nebulacompanies.ibo.view.MyTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="5"
                android:gravity="center"
                android:padding="5dp"
                android:singleLine="false"
                android:text="@string/downline_name"
                android:textColor="#ffffff" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#cfcfcf" />

            <com.nebulacompanies.ibo.view.MyTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:gravity="center"
                android:padding="5dp"
                android:singleLine="false"
                android:text="@string/city_"
                android:textColor="#ffffff" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#cfcfcf" />

            <com.nebulacompanies.ibo.view.MyTextView
                android:id="@+id/bv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:gravity="center"
                android:padding="5dp"
                android:singleLine="false"
                android:text="@string/bv"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ln_title"
            android:background="@drawable/table_effect_down"
            android:orientation="vertical">

            <ListView
                android:id="@+id/listViewDownline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_two_dp"
                android:background="@drawable/drawable_rounded_white_popup"
                android:divider="#cfcfcf"
                android:dividerHeight="1dp"
                android:fadeScrollbars="false"
                android:layoutAnimation="@anim/layout_animation_fall_down"
                android:smoothScrollbar="true" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>