<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="@dimen/dimen_fifteen_dp"
    android:layout_marginLeft="@dimen/dimen_fifteen_dp"
    android:layout_marginRight="@dimen/dimen_fifteen_dp"
    android:layout_marginStart="@dimen/dimen_fifteen_dp"
    android:background="@drawable/location_rounded_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/site_map_rounded_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.nebulacompanies.ibo.view.MyTextView
            android:id="@+id/address_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/corporate_office_chennai"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dimen_twelve_sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen_six_dp"
        android:weightSum="1">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="@dimen/dimen_six_dp"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/ic_location" />

        <com.nebulacompanies.ibo.view.MyTextView
            android:id="@+id/address_titlews_hyderabad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/dimen_four_dp"
            android:layout_weight="1"
            android:text="@string/corporate_office_chennai_address"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dimen_eleven_sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen_four_dp"
        android:weightSum="1">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="@dimen/dimen_six_dp"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/ic_call_black" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.9"
            android:orientation="vertical"
            android:weightSum="1">

            <com.nebulacompanies.ibo.view.MyTextView
                android:id="@+id/tv_chennai_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/nebula_effect"
                android:padding="@dimen/dimen_two_dp"
                android:text="@string/corporate_office_chennai_phone_number"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dimen_eleven_sp" />

            <com.nebulacompanies.ibo.view.MyTextView
                android:id="@+id/tv_chennai_toll_free_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_five_dp"
                android:layout_marginStart="@dimen/dimen_five_dp"
                android:layout_marginTop="@dimen/dimen_two_dp"
                android:background="@drawable/nebula_effect"
                android:gravity="center"
                android:padding="@dimen/dimen_two_dp"
                android:text="@string/office_phone_number2"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dimen_twelve_sp"
                android:visibility="gone" />


        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_four_dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_margin="@dimen/dimen_six_dp"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/ic_email_black_24dp" />

        <com.nebulacompanies.ibo.view.MyTextView
            android:id="@+id/email1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/dimen_one_dp"
            android:layout_marginRight="@dimen/dimen_one_dp"
            android:background="@drawable/nebula_effect"
            android:text="@string/chennai_email_address"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dimen_eleven_sp" />

    </LinearLayout>

</LinearLayout>